--- a/style.css
+++ b/style.css
@@ -150,28 +150,28 @@ border-radius: 8px;
     }
     .grid-img-2 {
         grid-column: 7/span 6;
-        grid-row: ;
+     
     }
     
     .grid-img-3 {
         grid-column: 1/span 3;
-        grid-row: ;
+        
     }
     .grid-img-4 {
         grid-column: 4/span 6;
-        grid-row: ;
+     
     }
     .grid-img-5 {
         grid-column: 10/span 3;
-        grid-row: ;
+    
     }
     .grid-img-6 {
         grid-column: 1/span 4;
-        grid-row: ;
+        
     }
     .grid-img-7 {
         grid-column: 5/span 8;
-        grid-row: ;
+        
     }
 
 .tour-container {
@@ -366,20 +366,22 @@ padding-bottom: 100px;
         display: none;
     }
     .nav-content{
-    padding: 10px;
+    padding: 5px;
     }
     #hero-travel {
         padding-left: 20px;
     }
     .banner-container{
-        padding: 10px;
+        padding: 5px;
         margin: 2px auto;
         height: 500px;
-        width: 700px;
+        width: 350px;
     }
     .banner-content h1 {
-        margin-top: 10px;
+        margin-top: 5px;
         margin-bottom: 10px;
+        font-size: 35px;
+    
     }
     .banner-input button {
        margin-top: 10px;
@@ -389,6 +391,7 @@ padding-bottom: 100px;
         width: 300px;
         margin: 10px auto;
         padding-top: 40px;
+        padding-bottom: 15px;
         height: 200px;
     }
      .banner-input div {
@@ -401,7 +404,7 @@ padding-bottom: 100px;
         margin: 10px 20px;
     }
     .para-banner{
-        width: 380px;
+        width: 300px;
     }
     .banner-info p {
         width: 300px;
@@ -417,99 +420,92 @@ padding-bottom: 100px;
     #find {
         margin-bottom: 30px;
     }
-    .tour-container {
+     .tour-container {
         flex-direction: column;
         margin: 10px auto;
         width: 90%;
     }
-
     .tour-container img {
-        width: 100%;
+        width: 320px;
     }
 
     .service-card-container {
-        flex-direction: column;
+        flex-direction: column; 
+        margin: 5px auto;
     }
-.box-one, .box-two, .box-three {
+ .box-one, .box-two, .box-three {
     width: 300px;
     padding: 20px;
     margin: 10px auto;
 }
 
-.service-card-container p{
+ .service-card-container p{
     width: 300px;
 }
-.service-container p {
+ .service-container p {
     width: 300px;
 }
-.news-container {
+ .news-container {
     flex-direction: column;
     margin: 10px auto;
 }
-.news-container img {
-    width: 340px;
+ .news-container img {
+    width: 330px;
     margin: 10px auto;
 }
-.news-info{
+ .news-info{
     margin: 10px auto;
 }
-.news-info p {
+ .news-info p {
     width: 250px;
 }
-#input-name, #input-mail{
+ #input-name, #input-mail{
     width: 280px;
 }
-.news-info button{
+ .news-info button{
 width: 280px;
 margin-left: 25px;
 }
-#footer-para {
-    width: 400px;
+ #footer-para {
+    width: 300px;
     padding: 10px auto;
 }
-.footer-img {
+ .footer-img {
     padding: 5px;
 }
 
-.save {
-width: 214.023px;
+ .save {
+width: 160px;
 height: 79.268px;
 transform: rotate(-19.628deg);
-left: 167px;
-bottom: 153px;
+left: 170px;
+bottom: 125px;
 }
-.save h1{
+ .save h1{
     font-size: 16px;
     margin-bottom: 5px;
     padding: 10px;
 }
-.save p {
+ .save p {
     font-size: 16px; 
 }
-.gallary-container {
+ .gallary-container {
     display: flex;
     flex-direction: column;
     margin: 5px auto;
-    width: 400px;
+    width: 350px;
 }
-.gallary-info p {
+ .gallary-info p {
     width: 400px;
     margin-bottom: 20px;
 }
-.gallary-info h1 {
+ .gallary-info h1 {
     margin-bottom: 10px;
 }
-.gallary-container img {
+ .gallary-container img {
     height: 200px;
     object-fit: cover;
 }
-body h1{
-    font-size: 20px;
+
 }
-body p{
-    font-size: 14px;
-}
-main {
-    margin-bottom: 1px;
-}
-}
+
