--- a/style.css
+++ b/style.css
@@ -122,6 +122,10 @@ border-radius: 8px;
     align-items: center;
     gap: 5px;
 }
+
+#white {
+    filter: brightness(0) invert(1); 
+}
 .gallary-info h1{
     text-align: center;
     color: #131318;
@@ -366,8 +370,51 @@ padding-top: 50px;
 padding-bottom: 100px;
 }
 
+#hotel-title {
+    text-align: center;
+    color: #131318;
+font-size: 30px;
+font-weight: 800;
+margin-top: 100px;
+}
+#hotel-content {
+color: rgba(19, 19, 24, 0.70);
+font-size: 18px;
+font-weight: 400;
+width: 500px;
+margin: 30px auto;
+display: flex;
+justify-content: center;
+text-align: center;
+}
 
-@media screen and (max-width: 600px) {
+
+.hotel-container {
+    max-width: 80%;
+    margin: 50px auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    justify-content: space-around;
+}
+.hotel-container div {
+padding: 20px;
+background: #FFF;
+box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+
+.hotel-container img {
+    background-color: lightgray 50%;
+}
+#hotel-img {
+    width: 100%;
+    height: 300px;
+}
+#ham {
+    display: none;
+}
+
+ @media screen and (max-width: 600px) {
     nav {
         display: none;
     }
@@ -513,6 +560,13 @@ bottom: 125px;
     height: 200px;
     object-fit: cover;
 }
-
+.hotel-container {
+    display: flex;
+    flex-direction: column;
+    margin: 50px auto;
 }
+#hotel-content {
+    width: 400px;
+}
+ }
 
